<resources>
    <string name="app_name">ESpeedboatAdmin</string>
    <string name="base_null">null</string>
    <string name="title_activity_dashboard_admin">DashboardAdminActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_review">Review</string>
    <string name="menu_transaksi_no">Transaksi not Done</string>
    <string name="menu_transaksi_done">Transaksi Done</string>
    <string name="menu_profile">Profil Admin</string>

    <string name="sb_view">Views</string>
    <string name="sb_dashboard">Dashboard</string>
    <string name="sb_berita">Berita</string>
    <string name="sb_profile">Profile Speedboat</string>
    <string name="sb_list_berita_speedboat">List Berita Speedboat</string>
    <string name="sb_management">Managements</string>
    <string name="sb_jadwal_edit">Edit Jadwal</string>
    <string name="sb_transaksi_done">Transaksi Done</string>
    <string name="sb_transaksi_not_done">Transaksi not Done</string>
    <string name="sb_point">Point Management</string>
    <string name="sb_review">Review</string>
    <string name="sb_qr">QR Scanner</string>

    <string name="rd_from">From</string>
    <string name="rd_to">To</string>
    <string name="rd_detail">Detail Order</string>

    <string name="btn_approve">Approve</string>
    <string name="btn_review">Review</string>
    <string name="btn_payment">Proof of Payment</string>

    <string name="qr_screen_desc">Scan Ticket QR Here!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_masuk">Masuk</string>
    <string name="login_forgot">Lupa Password</string>

    <!--  Splash  -->
    <string name="splash_app">E-Speedboat</string>
    <string name="splash_admin">Admin</string>
</resources>