<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EAF8FF"
    tools:context=".ui.transaksi.TransaksiDetailFragment">

    <LinearLayout
        android:id="@+id/td_wrapper"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="16dp"
        android:background="@drawable/bg_review_list"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toTopOf="@+id/td_btn_wrapper"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/td_username"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_medium"
                        android:text="@string/base_null"
                        android:textColor="@color/primary_black"
                        android:textSize="16sp" />

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:layout_marginHorizontal="4dp"
                        android:layout_marginVertical="2dp"
                        android:background="@color/primary_grey" />

                    <TextView
                        android:id="@+id/td_email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_medium"
                        android:text="@string/base_null"
                        android:textColor="@color/primary_black"
                        android:textSize="16sp" />
                </LinearLayout>

                <TextView
                    android:id="@+id/td_order_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/base_null"
                    android:textColor="@color/primary_grey"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/td_person"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/base_null"
                    android:textColor="@color/secondary_grey"
                    android:textSize="10sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/td_status_wrapper"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/status_yellow"
                    android:paddingHorizontal="8dp"
                    android:paddingVertical="4dp">

                    <TextView
                        android:id="@+id/td_status"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_medium"
                        android:text="@string/base_null"
                        android:textColor="@color/white"
                        android:textSize="14sp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/td_from"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_bold"
                android:gravity="left"
                android:text="@string/base_null"
                android:textAllCaps="true"
                android:textColor="@color/primary_blue"
                android:textSize="12sp" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginHorizontal="4dp"
                android:layout_weight="1"
                android:background="@color/primary_blue" />

            <TextView
                android:id="@+id/td_to"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_bold"
                android:gravity="right"
                android:text="@string/base_null"
                android:textAllCaps="true"
                android:textColor="@color/primary_blue"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/td_from_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/base_null"
                    android:textColor="@color/primary_blue"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/td_from_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/base_null"
                    android:textColor="@color/primary_blue"
                    android:textSize="13sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/td_to_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/base_null"
                    android:textColor="@color/primary_blue"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/td_to_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/base_null"
                    android:textColor="@color/primary_blue"
                    android:textSize="13sp" />
            </LinearLayout>
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycle_ticket"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/td_btn_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="16dp"
        android:visibility="visible"
        android:weightSum="2">
        <LinearLayout
            android:id="@+id/td_btn_left_wrapper"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:paddingRight="4dp">
            <Button
                android:id="@+id/td_btn_left"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_green_style"
                android:text="@string/btn_approve"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/td_btn_right_wrapper"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:paddingLeft="4dp">
            <Button
                android:id="@+id/td_btn_right"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_blue_style"
                android:text="@string/btn_payment" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>