<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_blue"
    tools:context=".ui.review.ReviewDetailFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="32dp"
        android:background="@drawable/bg_review_list"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">
            <ImageView
                android:id="@+id/rd_image_user"
                android:layout_width="48dp"
                android:layout_height="48dp"
                app:srcCompat="@drawable/ic_profil_pic"
                tools:ignore="ContentDescription"
                tools:srcCompat="@drawable/ic_profil_pic" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="8dp">
                <TextView
                    android:id="@+id/rd_email"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_medium"
                    android:textColor="@color/primary_black"
                    android:textSize="16sp"
                    android:gravity="start"
                    android:text="@string/base_null"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="start">
                    <LinearLayout
                        android:id="@+id/rd_score_wrapper"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="start">
                    </LinearLayout>
                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:layout_marginHorizontal="2dp"
                        android:background="@color/secondary_yellow"/>
                    <TextView
                        android:id="@+id/rd_score"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="2dp"
                        android:fontFamily="@font/roboto_bold"
                        android:textColor="@color/primary_yellow"
                        android:textSize="12sp"
                        android:text="@string/base_null"/>
                </LinearLayout>

                <TextView
                    android:id="@+id/rd_tanggal"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:fontFamily="@font/roboto_medium"
                    android:textColor="@color/primary_grey"
                    android:textSize="12sp"
                    android:text="@string/base_null" />
            </LinearLayout>
        </LinearLayout>
        <TextView
            android:id="@+id/rd_review"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:layout_marginTop="14dp"
            android:fontFamily="@font/roboto_medium"
            android:textColor="@color/secondary_grey"
            android:textSize="14sp"
            android:text="@string/base_null"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginVertical="8dp"
            android:background="@color/secondary_blue" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rd_from"
                    android:fontFamily="@font/roboto_medium"
                    android:textSize="12sp"
                    android:textColor="@color/primary_grey"
                    android:textAlignment="center"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="16dp"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_loc"/>
                    <TextView
                        android:id="@+id/rd_from_loc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="8dp"
                        android:text="@string/base_null"
                        android:fontFamily="@font/roboto_medium"
                        android:textSize="12sp"
                        android:textColor="@color/primary_blue"
                        android:textAllCaps="true"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="16dp"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_date"/>
                    <TextView
                        android:id="@+id/rd_from_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="8dp"
                        android:text="@string/base_null"
                        android:fontFamily="@font/roboto_medium"
                        android:textSize="12sp"
                        android:textColor="@color/primary_blue"
                        android:textAllCaps="true"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="16dp"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_time"/>
                    <TextView
                        android:id="@+id/rd_from_time"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="8dp"
                        android:text="@string/base_null"
                        android:fontFamily="@font/roboto_medium"
                        android:textSize="12sp"
                        android:textColor="@color/primary_blue"
                        android:textAllCaps="true"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rd_to"
                    android:fontFamily="@font/roboto_medium"
                    android:textSize="12sp"
                    android:textColor="@color/primary_grey"
                    android:textAlignment="center"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="16dp"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_loc"/>
                    <TextView
                        android:id="@+id/rd_to_loc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="8dp"
                        android:text="@string/base_null"
                        android:fontFamily="@font/roboto_medium"
                        android:textSize="12sp"
                        android:textColor="@color/primary_blue"
                        android:textAllCaps="true"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="16dp"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_date"/>
                    <TextView
                        android:id="@+id/rd_to_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="8dp"
                        android:text="@string/base_null"
                        android:fontFamily="@font/roboto_medium"
                        android:textSize="12sp"
                        android:textColor="@color/primary_blue"
                        android:textAllCaps="true"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="16dp"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_time"/>
                    <TextView
                        android:id="@+id/rd_to_time"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="8dp"
                        android:text="@string/base_null"
                        android:fontFamily="@font/roboto_medium"
                        android:textSize="12sp"
                        android:textColor="@color/primary_blue"
                        android:textAllCaps="true"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginVertical="8dp"
            android:background="@color/secondary_blue" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rd_detail"
                android:fontFamily="@font/roboto_medium"
                android:textSize="12sp"
                android:textColor="@color/primary_grey"
                android:textAlignment="center"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="16dp"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_speedboat"/>
                <TextView
                    android:id="@+id/rd_speedboat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="8dp"
                    android:text="@string/base_null"
                    android:fontFamily="@font/roboto_medium"
                    android:textSize="12sp"
                    android:textColor="@color/primary_blue"
                    android:textAllCaps="true"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="16dp"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_ticket"/>
                <TextView
                    android:id="@+id/rd_person"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="8dp"
                    android:text="@string/base_null"
                    android:fontFamily="@font/roboto_medium"
                    android:textSize="12sp"
                    android:textColor="@color/primary_blue"
                    android:textAllCaps="true"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="16dp"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_price"/>
                <TextView
                    android:id="@+id/rd_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="8dp"
                    android:text="@string/base_null"
                    android:fontFamily="@font/roboto_medium"
                    android:textSize="12sp"
                    android:textColor="@color/primary_blue"
                    android:textAllCaps="true"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>